Correção de carregamento de arquivo e opções do usuário.